# apiris-sdk

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
apiris/: __init__.py  cache.py  cli.py  client.py  config.py  decision_engine.py  evaluator.py  interceptor.py  log_utils.py
apiris/ai/: __init__.py  anomaly_model.py  loader.py  predictive_model.py  tradeoff_model.py
apiris/explain/: explainer.py
apiris/intelligence/: __init__.py  cve_advisory.py
apiris/models/: anomaly_model.json  cve_data.json  predictive_model.json  tradeoff_model.json
apiris/policy/: __init__.py  policy_loader.py  policy_manager.py  policy_validator.py
apiris/storage/: __init__.py  sqlite_store.py
examples/: basic_usage.py  demo_enhanced_cli.py  real_api_validation.py  test_enhanced_sdk.py
tests/: test_phase2.py  test_sdk.py
